--- a/Calculator1/app/src/main/res/layout/activity_main.xml
+++ b/Calculator1/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/nature">
 
     <TableLayout
         android:id="@+id/tableLayout1"
@@ -34,26 +35,26 @@
 
             <Button
                 android:id="@+id/bt_7"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="7" />
 
             <Button
                 android:id="@+id/bt_8"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="8" />
 
             <Button
                 android:id="@+id/bt_9"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="9" />
 
             <Button
                 android:id="@+id/bt_back"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="back" />
         </TableRow>
 
@@ -64,26 +65,26 @@
 
             <Button
                 android:id="@+id/bt_4"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="4" />
 
             <Button
                 android:id="@+id/bt_5"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="5" />
 
             <Button
                 android:id="@+id/bt_6"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="6" />
 
             <Button
                 android:id="@+id/bt_divide"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="/" />
         </TableRow>
 
@@ -94,26 +95,26 @@
 
             <Button
                 android:id="@+id/bt_1"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="1" />
 
             <Button
                 android:id="@+id/bt_2"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="2" />
 
             <Button
                 android:id="@+id/bt_3"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="3" />
 
             <Button
                 android:id="@+id/bt_multiply"
-                android:layout_width="80px"
-                android:layout_height="80px"
+                android:layout_width="90px"
+                android:layout_height="90px"
                 android:text="*" />
         </TableRow>
 
@@ -124,26 +125,26 @@
 
             <Button
                 android:id="@+id/bt_0"
-                android:layout_width="100px"
-                android:layout_height="80px"
+                android:layout_width="110px"
+                android:layout_height="90px"
                 android:text="0" />
 
             <Button
                 android:id="@+id/bt_point"
-                android:layout_width="100px"
-                android:layout_height="80px"
+                android:layout_width="110px"
+                android:layout_height="90px"
                 android:text="." />
 
             <Button
                 android:id="@+id/bt_add"
-                android:layout_width="100px"
-                android:layout_height="80px"
+                android:layout_width="110px"
+                android:layout_height="90px"
                 android:text="+" />
 
             <Button
                 android:id="@+id/bt_sub"
-                android:layout_width="100px"
-                android:layout_height="80px"
+                android:layout_width="110px"
+                android:layout_height="90px"
                 android:text="-" />
         </TableRow>
 
@@ -160,8 +161,8 @@
                 android:text="=" />
             <Button
                 android:id="@+id/bt_clear"
-                android:layout_width="100px"
-                android:layout_height="80px"
+                android:layout_width="110px"
+                android:layout_height="90px"
                 android:text="clear" />
         </TableRow>
     </TableLayout>
